...
  State<BudgetListScreen> createState() => _BudgetListScreenState();
}

class _BudgetListScreenState extends State<BudgetListScreen> {
  final TextEditingController _searchController = TextEditingController();
  final List<String> _filterOptions = [
    'Aprovados',
    'Não aprovados',
    'Expirados',
    'Pendentes',
    'Arquivados',
  ];
  String _selectedFilter = '';

  @override
  void initState() {
    super.initState();
...
  Widget build(BuildContext context) {
    final budgetStore = StoreProvider.of(context).budgetStore;

    return Scaffold(
      appBar: CustomAppBar(
        isBackButtonVisible: false,
        title: 'Orçamentos',
        actions: [
          GestureDetector(
            onTap: () {
              Navigator.push(
                context,
                MaterialPageRoute(
...
                      style: TextStyle(
                        fontWeight: FontWeight.bold,
                        fontSize: 16,
                      ),
                    ),
                    TextButtonLink(
                      text: 'Resetar',
                      onPressed: () {
                        setState(() {
                          _selectedFilter = '';
                          _searchController.clear();
                        });
                        budgetStore.setSelectedFilter('todos');
...
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 16),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                Text(
                  _selectedFilter == 'Arquivados' ? 'Arquivados' : 'Realizados',
                  style: const TextStyle(
                    fontWeight: FontWeight.bold,
                    fontSize: 18,
                    color: Color(0xFF484848),
                  ),
                ),
...
