...
    ),
    WikiItem(
      id: 'new_budget',
      title: 'Gerando um novo orçamento',
      content: '''Para gerar um novo orçamento:

1. Na página inicial, clique no botão "Novo Orç.";
2. Preencha as Informações Iniciais (Cidade, Responsável, E-mail e Telefone) e clique em "Próximo";
3. Configure os dados do censo escolar da cidade (se aplicável);
4. Selecione as categorias e os produtos desejados;
5. Revise as informações do orçamento e clique em "Salvar Alterações".''',
    ),
    WikiItem(
      id: 'edit_budget',
      title: 'Editando um orçamento existente',
      content: '''Para editar um orçamento existente:

...
